Phase 1 of Celesteia 1.0 (#14)
* Gamepad input, new main menu, game start

* Move Rect to UI

* Input wrappers, Debug UI

* Fixed timestep and fixed published console app

* Push before Germany

* Code cleanup 1

* Code cleanup 2

* Migration to `GameScreen` from `MonoGame.Extended`

* Camera test

* Player movement, camera follow, input management and code cleanup

* Unused variable in GUI.cs

* GraphicsController and new leafal.io logo

* Refinements on GraphicsController and cleanup

* Placeholder splash screen sound

* Stargaze Symphony and resource name consistency

* Proper content names

* Use software fullscreen mode by default

* Remove GUI debugging for mouse clicks

* New method of resource loading, blocks

* Camera matrix fuckery

* Font type resource management

* Music manager, scene transitions

* Code cleanup

* Remove unused assets, main menu screen replicated

* Finally fixed the skybox

* Begin Celest*e*ia rebrand

* New logo

* Celesteia rebrand in source code

--- a/Celesteia.csproj
+++ b/Celesteia.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
@@ -24,6 +24,9 @@
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
+    <PackageReference Include="MonoGame.Extended.Entities" Version="3.8.0" />
+    <PackageReference Include="MonoGame.Extended.Input" Version="3.8.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
   </ItemGroup>
